--- a/views/content/home.html
+++ b/views/content/home.html
@@ -107,9 +107,35 @@
     </div>
   </div>
 </div>
-<div class="brand-brown-bg">
+<div class="brand-brown-bg section-story">
   <div class="container">
-    <div class="slider"></div>
+    <div class="slider brand-brown-light-bg">
+      <carousel interval="myInterval" no-wrap="noWrapSlides">
+        <slide ng-repeat="slide in homestory" active="slide.active">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="story-video">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="view-detail relate">
+                <h4 class="text-left brand-brown-dark name">{{slide.name}}</h4>
+                <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
+                <div class="descp brand-primary">
+                  <p class="text-left">{{slide.descp}}</p>
+                </div>
+                <div class="get-round weight-info">
+                  <span class="text-uppercase brand-brown-dark-bg">Lost</span>
+                  <br>
+                  <span class="weight-count">{{slide.weight}}kgs</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </slide>
+      </carousel>
+    </div>
   </div>
 </div>
 <div class="health-diet">
