--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -4,46 +4,49 @@
     <h2 class="text-uppercase">Success Stories</h2>
   </div>
 
-  <div class="brand-primary-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-offset-1 col-md-10">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="info">
-                <div class="">
-                  <p>Total number of
-                    <span>Clients</span>
-                  </p>
-                  <p>10348</p>
-                </div>
-                <div class="icon">
-                  <i class="fa fa-"></i>
-                </div>
+  <div class="brand-primary-bg people-info">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-1 col-md-10">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="info text-center">
+              <div class=" inline-block v-top">
+                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total number of
+                  <span class="block">Clients</span>
+                </h5>
+                <h3 class="health-count text-left white text-bold">10348</h3>
+              </div>
+              <div class="icon inline-block v-top">
+                <img src="img/user.png" alt="" class="img-responsive">
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="info">
-                <div class="">
-                  <p>Total
-                    <span>Weight Loss</span>
-                  </p>
-                  <p>7500
-                    <span>in kgs</span>
-                  </p>
-                </div>
-                <div class="icon"><i class="fa fa-"></i></div>
+          </div>
+          <div class="col-md-4">
+            <div class="info  text-center">
+              <div class="inline-block v-top">
+                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total
+                  <span class="block count">Weight Loss</span>
+                </h5>
+                <h3 class="health-count text-left white text-bold">7500
+                  <span>in kgs</span>
+                </h3>
+              </div>
+              <div class="icon inline-block">
+                <img src="img/weight-meter.png" alt="" class="img-responsive">
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="info">
-                <div class="">
-                  <p>Presence in
-                    <span>Countries</span>
-                  </p>
-                  <p>38</p>
-                </div>
-                <div class="icon"><i class="fa fa-"></i></div>
+          </div>
+          <div class="col-md-4">
+            <div class="info  text-center">
+              <div class="inline-block v-top">
+                <h5 class="text-uppercase text-bold  brand-brown-dark health-title">Presence in
+                  <span class="block">Countries</span>
+                </h5>
+                <h3 class="health-count text-left white text-bold">38</h3>
+              </div>
+              <div class="icon inline-block">
+                <img src="img/world.png" alt="" class="img-responsive">
               </div>
             </div>
           </div>
@@ -51,6 +54,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <div class="stories-section">
     <div class="container">
