--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -6,84 +6,84 @@
     </div>
 </div>
 <div class="container">
-    <div class="faq-accordion">
-        <accordion close-others="oneAtATime">
-            <accordion-group is-open="status.open">
-               <accordion-heading>
+    <div class="faq-uib-accordion">
+        <uib-accordion close-others="oneAtATime">
+            <uib-accordion-group is-open="status.open">
+               <uib-accordion-heading>
                    How does the online program work?
-               </accordion-heading>
+               </uib-accordion-heading>
                 <div class="faq-descp">
                     <p>Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                 </div>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Do I need to pay upfront or I can pay in installments?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Does Suman Agarwal meet the clients personally?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Is there any special offer or discount for a family or a couple?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     How does this program work?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     What is the pattern of diet, whether it is strict and how is the exercise pattern?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     How soon we can get an appointment?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Do we get a grace period in case we are unable to achieve our target weight in the given time span?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     What are the differences between packages with Suman Agarwal and her Senior Nutritionist?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     How would I know which package suits me the best?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Do you give tablets to lose weight?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Can we gift these programs to our family members or friends?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>
                     Do you have plans for kids as well?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>Do you have packages other than weight loss, like detox or bridal package?
-                </accordion-heading>
-            </accordion-group>
-            <accordion-group is-open="status.open">
-                <accordion-heading>Do you suggest any elaborate blood tests? <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-plus': status.open, 'glyphicon-chevron-minus': !status.open}">
-         </accordion-heading>
-      </accordion-group>
-    </accordion>
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>Do you have packages other than weight loss, like detox or bridal package?
+                </uib-accordion-heading>
+            </uib-accordion-group>
+            <uib-accordion-group is-open="status.open">
+                <uib-accordion-heading>Do you suggest any elaborate blood tests? <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-plus': status.open, 'glyphicon-chevron-minus': !status.open}">
+         </uib-accordion-heading>
+      </uib-accordion-group>
+    </uib-accordion>
   </div>
 </div>
