home slider fixed

--- a/views/header.html
+++ b/views/header.html
@@ -16,8 +16,10 @@
             <div class="col-md-11">
               <div class="logo">
                 <h1>
-                  <img src="img/logo.png" alt="">
-                  <span>for Health &amp; Immunity</span>
+                  <a href="#/home">
+                    <img src="img/logo.png" alt="">
+                    <span>for Health &amp; Immunity</span>
+                  </a>
                 </h1>
               </div>
             </div>
