--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -1,9 +1,12 @@
 // //////////////////////////////////
 // HEADER
 // //////////////////////////////////
-.carousel-control {
-  background-image: none;
+.carousel-control.left, .carousel-control.right { background-image: none; }
+.section-story {
+  .carousel-control.left { left: -50px; }
+  .carousel-control.right { right: -50px; }
 }
+.carousel-indicators { display: none; }
 // Hamburger
 .hamburger {
   margin-top: 30px;
