--- a/views/content/home.html
+++ b/views/content/home.html
@@ -123,7 +123,7 @@
                 <h4 class="text-left brand-brown-dark name">{{slide.name}}</h4>
                 <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                 <div class="descp brand-primary">
-                  <p class="text-left">{{slide.descp}}</p>
+                  <p class="text-justify">{{slide.descp}}</p>
                 </div>
                 <div class="get-round weight-info text-center">
                   <span class="text-uppercase brand-brown-dark-bg">Lost</span>
