--- a/views/content/home.html
+++ b/views/content/home.html
@@ -204,7 +204,7 @@
           <div class="blog-info">
             <div class="row">
               <div class="col-md-4">
-                <div class="blog-imgholder">
+                <div class="blog-imgholder ">
                   <img src="img/blog2.png" alt="" class="img-responsive">
                 </div>
               </div>
@@ -223,7 +223,7 @@
                 </div>
               </div>
               <div class="col-md-8">
-                <div class="blog-imginfo">
+                <div class="blog-imginfo last-blog-info">
                   <p>Calories In Cocktails</p>
                 </div>
               </div>
@@ -285,7 +285,7 @@
             <h5 class="text-bold">Only the fit know how fabulous it feels.</h5>
             <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
             <div class="more">
-              <button class="text-uppercase btn btn-primary">know more</button>
+              <a href="#/aboutus" class="text-uppercase btn btn-primary">know more</a>
             </div>
           </div>
         </div>
