--- a/views/content/home.html
+++ b/views/content/home.html
@@ -196,7 +196,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo">
-                  <p>Anti Ageing Tips</p>
+                  <p class="letter-space">Anti Ageing Tips</p>
                 </div>
               </div>
             </div>
@@ -210,7 +210,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo">
-                  <p>Calcium For All Ages And Genders</p>
+                  <p class="letter-space">Calcium For All Ages And Genders</p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo last-blog-info">
-                  <p>Calories In Cocktails</p>
+                  <p class="letter-space">Calories In Cocktails</p>
                 </div>
               </div>
             </div>
@@ -268,7 +268,7 @@
             </div>
           </form>
           <div class="text-right">
-            <button class="text-uppercase btn btn-primary" type="submit">Submit</button>
+            <button class="text-uppercase btn btn-primary btn-more" type="submit">Submit</button>
           </div>
         </div>
       </div>
