--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -36,7 +36,7 @@
   border-left: 1px solid $brand-primary;
   border-right: 1px solid $brand-primary;
   @include margin(0 0 0 -40px);
-  @include padding(12px);
+  @include padding(12px 18px);
   font-weight: bold;
   font-size: 13px;
   letter-spacing: 1px;
@@ -48,7 +48,6 @@
   font-size: 16px;
   font-weight: bold;
 }
-
 
 // About
 .selfcare-image {
