--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -1,70 +1,71 @@
 <div class="health-management">
-    <div class="banner">
+    <div class="banner selfcare-image">
+      <img src="img/apple.jpg" alt="">
         <div class="get-center">
-            <h2>health management</h2>
+            <h2 class="text-uppercase letter-space white">health management</h2>
         </div>
     </div>
     <div class="container">
-        <div class="get-up bg">
-            <p>Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. A right plan can contribute significantly to recover from lifestyle, hormonal and genetics related disorder. We provide a tailor made diet plan to overcome these health and well being complaints and also target weight loss.  Along with nutritional advice we examine stipulated blood test to see if you are genetically pre-disposed to any health ailments will also recommend vitamins to help keep future disorder at bay. These are specialized plans aimed at individual with particular needs such as pregnancy, weight gain, inch loss etc. A personalized and detailed diet chart will be created to meet your specific requirements.</p>
+        <div class="get-up brand-brown-bg relate">
+            <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. A right plan can contribute significantly to recover from lifestyle, hormonal and genetics related disorder. We provide a tailor made diet plan to overcome these health and well being complaints and also target weight loss.  Along with nutritional advice we examine stipulated blood test to see if you are genetically pre-disposed to any health ailments will also recommend vitamins to help keep future disorder at bay. These are specialized plans aimed at individual with particular needs such as pregnancy, weight gain, inch loss etc. A personalized and detailed diet chart will be created to meet your specific requirements.</p>
         </div>
     </div>
     <div class="health-manageselect">
-        <div class="managecat">
+        <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">alment control</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">healthy ageing</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">lactation</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">senior citizen</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">super kids</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">pregnancy</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">weight gain</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">inch loss</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">cool suclpting</figcaption>
             </figure>
         </div>
-         <div class="managecat">
+         <div class="managecat inline-block">
             <figure>
                 <img src="" alt="" class="img-responsive">
                 <figcaption class="text-center text-uppercase">post cancer</figcaption>
