--- a/views/content/home.html
+++ b/views/content/home.html
@@ -243,13 +243,14 @@
           </div>
           <h4 class="letter-space">Ask and get an answer on the healthiest food tips</h4>
           <form action="">
-            <div class="form-group">
+            <div class="form-group relate">
               <select name="" id="" class="form-control">
                 <option value="">Choose a Category</option>
                 <option value="">Category 1</option>
                 <option value="">Category 2</option>
                 <option value="">Category 3</option>
               </select>
+              <span class="caret white"></span>
             </div>
             <div class="row">
               <div class="col-md-6">
