--- a/views/header.html
+++ b/views/header.html
@@ -33,12 +33,12 @@
               <div class="col-md-6">
                 <div class="social-links">
                   <ul>
-                    <li><a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i></a></li>
-                    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook brand-primary"></i></a></li>
-                    <li><a href="https://twitter.com/"><i class="fa fa-twitter brand-primary"></i></a></li>
-                    <li><a href="https://instagram.com/"><i class="fa fa-instagram brand-primary"></i></a></li>
-                    <li><a href="https://www.youtube.com/"><i class="fa fa-youtube brand-primary"></i></a></li>
-                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p brand-primary"></i></a></li>
+                    <li><a href="#/cart" class="brand-primary"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li><a href="https://www.facebook.com/" class="brand-primary"><i class="fa fa-facebook "></i></a></li>
+                    <li><a href="https://twitter.com/" class="brand-primary"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/" class="brand-primary"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.youtube.com/" class="brand-primary"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://www.pinterest.com/" class="brand-primary"><i class="fa fa-pinterest-p"></i></a></li>
                   </ul>
                 </div>
               </div>
